Bug for continuous loader and semi average formula fixed

--- a/src/ShowGuidanceFiles/ExtrapolationEn.html
+++ b/src/ShowGuidanceFiles/ExtrapolationEn.html
@@ -44,7 +44,9 @@
 						to trends. It is not appropriate for seasonal data
 					</li>
 					<li><b>Semi-Averages:</b>Semi-average estimates trends based on two halves of a series. QAT 
-						divides the actual data into two equal parts (halves) and the arithmetic mean of the values 
+						divides the actual data into two equal parts (halves) but incase actual consumption data 
+						is not for the even months then 
+						the middle point is excluded and the arithmetic mean of the values 
 						of each part (half) is calculated as the y values of two points on a line. The slope 
 						of the trend line is determined by the difference between these y values over time as 
 						defined by the difference of the midpoints of the two halves of the series, or x values, 
