--- a/src/ShowGuidanceFiles/ExtrapolationPr.html
+++ b/src/ShowGuidanceFiles/ExtrapolationPr.html
@@ -53,13 +53,14 @@
 			previsões de curto prazo e é sensível às tendências. Não é apropriado para dados 
 			sazonais
 		</li>
-		<li><b>Semi-médias:</b>semi-média estima tendências com base em duas metades de uma série. 
-			QAT divide os dados reais em duas partes iguais (metades) e a média aritmética dos valores 
-			de cada parte (metade) é calculada como os valores de y de dois pontos em uma linha. 
-			A inclinação da linha de tendência é determinada pela diferença entre esses valores de y ao 
+		<li><b>Semi-médias:</b>A semimédia estima tendências com base em duas metades de uma série. 
+			O QAT divide os dados reais em duas partes iguais (metades), mas caso os dados de consumo 
+			real não sejam para os meses pares, o ponto médio é excluído e a média aritmética dos 
+			valores de cada parte (metade) é calculada como os valores y de dois pontos em uma linha. 
+			A inclinação da linha de tendência é determinada pela diferença entre estes valores de y ao 
 			longo do tempo, conforme definido pela diferença dos pontos médios das duas metades da série, 
-			ou valores de x, dos pontos. Este método é sensível às tendências e útil para previsões de 
-			curto e médio prazo, mas não é apropriado para dados sazonais. 
+			ou valores de x, dos pontos. Este método é sensível às tendências e útil para previsões 
+			de curto e médio prazo, mas não é apropriado para dados sazonais.
 		</li>
 		<li><b>Regressão linear:</b> A regressão linear modela a relação entre duas variáveis 
 			ajustando uma equação linear aos dados observados. Intervalo de confiança :  entre 0% e 
