commited by anisha

--- a/src/ShowGuidanceFiles/AddEditNodeDataPr.html
+++ b/src/ShowGuidanceFiles/AddEditNodeDataPr.html
@@ -73,19 +73,19 @@ a {
 														<tr>
 															<td style="background: #a7c6ed;color: #002f6c;"><b>Número #</b></td>
 															<td>Definido neste nó</td>
-															<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
+															<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i></td>
 														</tr>
 														<tr>
 															<td style="background: #a7c6ed;color: #002f6c;"><b>Percentagem %</b></td>
 															<td>Definido como uma porcentagem do pai</td>
-															<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
+															<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
 														</tr>
 														<tr>
 															<td style="background:#002f6c;color: #fff;"><b>Unidade de previsão <i class="fa fa-cube" aria-hidden="true"></i></b></td>
 															<td>Definido como uma porcentagem dos parâmetros da unidade pai e de previsão</td>
-															<td><b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cubes" aria-hidden="true"></i></b></td>
+															<td><b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cubes" aria-hidden="true"></i></b></td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
 														</tr>
 														<tr>
