--- a/src/ShowGuidanceFiles/BuildTreeModelingTransferEn.html
+++ b/src/ShowGuidanceFiles/BuildTreeModelingTransferEn.html
@@ -60,7 +60,7 @@
 		<tr>
 			<td align="center" style="padding:0;">
 				<table role="presentation"
-					style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border:1px solid #fff;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
+					style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
 					<tr>
 						<td style="padding:10px 30px 20px 30px;">
 							<table role="presentation"
@@ -235,7 +235,7 @@
 													each month by 2% from January 2022 to December 2024. QAT has
 													calculated this change to
 													be increasing the population by 108.64 each month.</p><br>
-												<span><img class="formula-img-mr img-fluid mb-lg-0 mt-lg-0"
+												<span><img class="img-fluid mb-lg-0 mt-lg-0"
 														src="../ShowGuidanceFiles/img/ModelingTransferScreenshot3.jpg"
 														style="border: 1px solid rgb(255, 255, 255);margin: 10px 0px 20px 0px;
 														padding: 10px;border-radius: 5px;max-width:100%;height: auto;"></span>
