--- a/src/ShowGuidanceFiles/ManageTreeBuildTreesSp.html
+++ b/src/ShowGuidanceFiles/ManageTreeBuildTreesSp.html
@@ -42,7 +42,7 @@ a {
 	<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
 		<tr>
 			<td align="center" style="padding:0;">
-				<table role="presentation" style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border:1px solid #fff;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
+				<table role="presentation" style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
 					<tr>
 						<td style="padding:10px 30px 20px 30px;">
 							<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
@@ -66,9 +66,9 @@ a {
 
 													<p style="font-size: 13px; font-weight: bold;"><span class="">Acciones de nodo :</span></p>
 													<ul class="pl-lg-4" style="font-size: 13px;">
-														<li><i class="fa fa-trash-o" aria-hidden="true" style="color: rgb(0, 47, 108);"></i> Eliminar: elimina el nodo seleccionado </li>
-														<li><i class="fa fa-clone" aria-hidden="true" style="color: rgb(0, 47, 108);"></i> Duplicar: Duplica el nodo seleccionado bajo el mismo padre </li>
-														<li><i class="fa fa-plus-square-o" aria-hidden="true" style="color: rgb(0, 47, 108);"></i> Agregar: agrega un hijo al nodo seleccionado.</li>
+														<li><i class="fa fa-trash-o" aria-hidden="true" ></i> Eliminar: elimina el nodo seleccionado </li>
+														<li><i class="fa fa-clone" aria-hidden="true"></i> Duplicar: Duplica el nodo seleccionado bajo el mismo padre </li>
+														<li><i class="fa fa-plus-square-o" aria-hidden="true" ></i> Agregar: agrega un hijo al nodo seleccionado.</li>
 													</ul>
 
 													<p style="font-size: 13px;">
@@ -95,19 +95,19 @@ a {
 																	<tr>
 																		<td class="BgLightBlue"><b>Número #</b></td>
 																		<td>Definido en este nodo</td>
-																		<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
+																		<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
 																		<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i></td>
 																	</tr>
 																	<tr>
 																		<td class="BgLightBlue"><b>Porcentaje %</b></td>
 																		<td>Definido como un porcentaje del padre</td>
-																		<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
+																		<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
 																		<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
 																	</tr>
 																	<tr>
 																		<td class="BgDarkBlue"><b>Unidad de previsión <i class="fa fa-cube" aria-hidden="true"></i></b></td>
 																		<td>Definido como un porcentaje de los parámetros de la unidad principal y de pronóstico</td>
-																		<td><b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cubes" aria-hidden="true"></i></b></td>
+																		<td><b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cubes" aria-hidden="true"></i></b></td>
 																		<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
 																	</tr>
 																	<tr>
