--- a/src/ShowGuidanceFiles/BuildTreeModelingTransferPr.html
+++ b/src/ShowGuidanceFiles/BuildTreeModelingTransferPr.html
@@ -60,7 +60,7 @@
 		<tr>
 			<td align="center" style="padding:0;">
 				<table role="presentation"
-					style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border:1px solid #fff;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
+					style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
 					<tr>
 						<td style="padding:10px 30px 20px 30px;">
 							<table role="presentation"
