--- a/src/ShowGuidanceFiles/ManageTreeBuildTreesFr.html
+++ b/src/ShowGuidanceFiles/ManageTreeBuildTreesFr.html
@@ -42,7 +42,7 @@ a {
 	<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
 		<tr>
 			<td align="center" style="padding:0;">
-				<table role="presentation" style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border:1px solid #fff;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
+				<table role="presentation" style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
 					<tr>
 						<td style="padding:10px 30px 20px 30px;">
 							<table role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
@@ -70,9 +70,9 @@ a {
 												<span class="">Actions de nœud :</span>
 											</p>
 											<ul class="pl-lg-4" style="font-size: 13px;">
-												<li><i class="fa fa-trash-o" aria-hidden="true" style="color: rgb(0, 47, 108);"></i> Supprimer : Supprime le nœud sélectionné </li>
-												<li><i class="fa fa-clone" aria-hidden="true" style="color: rgb(0, 47, 108);"></i> Dupliquer : Duplique le nœud sélectionné sous le même Noeud Source </li>
-												<li><i class="fa fa-plus-square-o" aria-hidden="true" style="color: rgb(0, 47, 108);"></i> Ajouter : ajoute un noeud dérivé du nœud sélectionné.</li>
+												<li><i class="fa fa-trash-o" aria-hidden="true" ></i> Supprimer : Supprime le nœud sélectionné </li>
+												<li><i class="fa fa-clone" aria-hidden="true" ></i> Dupliquer : Duplique le nœud sélectionné sous le même Noeud Source </li>
+												<li><i class="fa fa-plus-square-o" aria-hidden="true"></i> Ajouter : ajoute un noeud dérivé du nœud sélectionné.</li>
 											</ul>
 										</p>
 										<p>
@@ -99,19 +99,19 @@ a {
 														<tr>
 															<td class="BgLightBlue"><b>Nombre #</b></td>
 															<td>Défini à ce nœud</td>
-															<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
+															<td>% or <b style=" color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i></td>
 														</tr>
 														<tr>
 															<td class="BgLightBlue"><b>Pourcentage %</b></td>
 															<td>Défini comme un pourcentage du parent/source</td>
-															<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
+															<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
 														</tr>
 														<tr>
 															<td class="BgDarkBlue"><b>Unité de prévision <i class="fa fa-cube" aria-hidden="true"></i></b></td>
 															<td>Défini comme un pourcentage de la source et des paramètres de l'unité de prévision</td>
-															<td><b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cubes" aria-hidden="true"></i></b></td>
+															<td><b style=" color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cubes" aria-hidden="true"></i></b></td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
 														</tr>
 														<tr>
