commited by anisha

--- a/src/ShowGuidanceFiles/TreeTableEn.html
+++ b/src/ShowGuidanceFiles/TreeTableEn.html
@@ -147,6 +147,9 @@ a {
 													you can set up your tree with Forecasting Unit A (discrete for 2 months, lag=0), 
 													Forecasting Unit B (discrete for 2 months, lag=2), Forecasting Unit C 
 													(discrete for 2 months, lag = 4).</li>
+													<li><b>Repeating Forecasting Usages?</b> If multiple Forecasting Unit nodes share the same 
+														settings, consider using the <a href="/#/usageTemplate/listUsageTemplate" target="_blank" style="text-decoration: underline;">Usage Templates </a>screen to save your common usages, and then using 
+														the “Copy from Template” field to populate the fields in the forecasting unit nodes. </li>
 											</ul>
 											</li>
 											
