--- a/src/ShowGuidanceFiles/TreeTableFr.html
+++ b/src/ShowGuidanceFiles/TreeTableFr.html
@@ -152,6 +152,9 @@ a {
 													vous pouvez paramétrer votre arbre avec l'Unité de Prévision A (discrète sur 2 mois, lag=0), 
 													Unité de prévision B (discrète sur 2 mois, décalage = 2), unité de prévision C 
 													(discret pendant 2 mois, décalage = 4).</li>
+													<li><b>Repeating Forecasting Usages?</b> If multiple Forecasting Unit nodes share the same 
+														settings, consider using the <a href="/#/usageTemplate/listUsageTemplate" target="_blank" style="text-decoration: underline;">Usage Templates </a>screen to save your common usages, and then using 
+														the “Copy from Template” field to populate the fields in the forecasting unit nodes. </li>
 											</ul>
 											</li>
 											
