--- a/src/ShowGuidanceFiles/TreeTablePr.html
+++ b/src/ShowGuidanceFiles/TreeTablePr.html
@@ -146,6 +146,10 @@ a {
 																(discreta por 2 meses , lag=0), Unidade de previsão B (discreta para 2 meses, lag=2), 
 																Unidade de previsão C (discreta para 2 meses, lag = 4).
 															</li>
+															<li><b>Repetindo Usos de Previsão?</b> Se vários nós da Unidade de previsão compartilharem 
+																as mesmas configurações, considere usar o <a href="/#/usageTemplate/listUsageTemplate" target="_blank" style="text-decoration: underline;">Modelo de uso </a>tela para salvar seus usos comuns e,
+																 em seguida, usando o campo Copiar do modelo para preencher os campos nos nós da unidade 
+																 de previsão. </li>
 														</ul>
 													</li>
 													
