--- a/src/ShowGuidanceFiles/TreeTableSp.html
+++ b/src/ShowGuidanceFiles/TreeTableSp.html
@@ -149,6 +149,9 @@ a {
 													(discreta para 2 meses). , lag=0), Unidad de Pronóstico B (discreta por 2 meses, lag=2), 
 													Unidad de Pronóstico C (discreta por 2 meses, lag = 4).
 												</li>
+												<li><b>¿Usos de pronóstico repetidos?</b> Si varios nodos de Unidad de pronóstico 
+													comparten la misma configuración, considere usar el <a href="/#/usageTemplate/listUsageTemplate" target="_blank" style="text-decoration: underline;">Plantilla de uso </a>pantalla para guardar sus usos comunes y luego usar el campo Copiar de plantilla para completar 
+													los campos en los nodos de la unidad de pronóstico. </li>
 											</ul>
 										</li>
 										
