commited by anisha

--- a/src/ShowGuidanceFiles/compareAndSelectScenarioFr.html
+++ b/src/ShowGuidanceFiles/compareAndSelectScenarioFr.html
@@ -94,7 +94,8 @@
 												construire une approche basée sur la consommation
 												prévision. Toutes les lignes qui apparaissent en gris et non modifiables indiquent qu'il existe
 												Aucune quantité prévisionnelle n'est disponible car il n'y a pas de données pour cela
-												prévision particulière.</li>
+												prévision particulière.
+</li>
 											<li>Examinez les prévisions disponibles en utilisant les informations suivantes sur le
 												écran:<ul type="a">
 													<li> <b>Erreur de prévision (%) :</b> cette erreur est calculée à l'aide du
@@ -130,21 +131,29 @@
 </li>
 												</ul>
 											</li>
-											<li>Sélectionnez la prévision finale dans le tableau Comparer et sélectionner. S'il y a un avertissement 
-												avec le symbole de remplissage plein<i class="fa fa-exclamation-triangle" aria-hidden="true"></i> à côté de l'unité de planification, aucune prévision n'est sélectionnée. 
-												S'il y a une case à cocher cochée avec un symbole <i class="fa fa-check-square" aria-hidden="true"></i> à côté de l'unité de planification, 
-												une prévision est sélectionnée. Répétez les étapes 1 à 3 pour chaque unité de planification et 
-												Région jusqu'à ce qu'il n'y ait plus d'avertissement avec des symboles <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> à remplissage plein. Une fois terminé, 
+											<li>
+												Sélectionnez la prévision finale dans le tableau Comparer et sélectionner. S'il y a un
+
+												Symbole <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+												à côté de l'unité de planification, il y a
+												aucune prévision sélectionnée.
+												S'il y a un <i class="fa fa-check-square" aria-hidden="true"></i>
+												symbole à côté
+												la Cellule de Planification,
+												une prévision est sélectionnée. Répétez les étapes 1 à 3 pour chaque unité de planification
+												et
+												Région jusqu'à ce qu'il n'en soit plus<i class="fa fa-exclamation-triangle"
+													symboles aria-hidden="true"></i>
+												rester. Une fois terminé,
 												continuez vers le <a href="/#/forecastReport/forecastOutput"
-												target="_blank" style="text-decoration: underline;">Mensuel
-												Prévisions</a> pour vérifier toutes les unités de planification ensemble.</li>
+													target="_blank" style="text-decoration: underline;">Mensuel
+													Prévisions</a> pour vérifier toutes les unités de planification ensemble.
+											</li>
 										</ol>
 										<p>Remarque : Les utilisateurs peuvent sélectionner plusieurs prévisions d'arbres comme prévision finale, ce qui
-											volonté
-											agréger les quantités mensuelles prévisionnelles ; cependant, les utilisateurs ne peuvent pas sélectionner
-											multiple
-											des prévisions de consommation ou une combinaison de prévisions de consommation et d'arbres.
-
+											regroupera les quantités prévisionnelles mensuelles ; cependant, les utilisateurs ne peuvent pas sélectionner
+											plusieurs prévisions de consommation ou une combinaison de consommation et d'arbre
+											prévisions.
 										</p>
 										</p>
 										</p>
