--- a/src/ShowGuidanceFiles/compareAndSelectScenarioSp.html
+++ b/src/ShowGuidanceFiles/compareAndSelectScenarioSp.html
@@ -88,20 +88,16 @@
 										<p style="font-size: 13px;"><span style="font-weight:bold ;"><u>Usando esta
 													pantalla :</u></span></p>
 										<ol style="font-size: 13px;" type="1">
-											<li>Verifique para asegurarse de que todos los pronósticos esperados
-												aparezcan en Comparar y seleccionar
-												mesa. Para agregar pronósticos, navegue hasta <a
-													href="/#/dataset/listTree" target="_blank"
-													style="text-decoration: underline;">Administrar árbol</a>
+											<li>Verifique para asegurarse de que todos los pronósticos esperados aparezcan en Comparar y seleccionar
+												mesa. Para agregar pronósticos, navegue hasta <a href="/#/dataset/listTree"
+													target="_blank" style="text-decoration: underline;">Administrar árbol</a>
 												pantalla para construir un
 												pronóstico de árbol o el <a href="/#/Extrapolation/extrapolateData"
-													objetivo="_en blanco" pantalla
-													style="text-decoration: underline;">Extrapolación</a> para
+													objetivo="_en blanco"
+													pantalla style="text-decoration: underline;">Extrapolación</a> para
 												construir una economía basada en el consumo
-												pronóstico. Cualquier fila que aparezca gris y no editable indica que
-												hay
-												No hay ninguna cantidad prevista disponible porque no hay datos para
-												eso.
+												pronóstico. Cualquier fila que aparezca gris y no editable indica que hay
+												No hay ninguna cantidad prevista disponible porque no hay datos para eso.
 												pronóstico particular.</li>
 											<li>Revise los pronósticos disponibles usando la siguiente información en la
 												pantalla:<ul type="a">
@@ -150,24 +146,29 @@
 														período de pronóstico. </li>
 												</ul>
 											</li>
-											<li>Seleccione el pronóstico final en la tabla Comparar y Seleccionar. Si hay una advertencia 
-												con el símbolo de relleno sólido<i class="fa fa-exclamation-triangle" aria-hidden="true"></i> junto a la Unidad de planificación, no hay ningún pronóstico seleccionado. 
-												Si hay una casilla de verificación marcada con el símbolo de relleno sólido <i class="fa fa-check-square" aria-hidden="true"></i> junto a la Unidad de planificación, 
-												hay un pronóstico seleccionado. Repita los pasos 1-3 para cada unidad de planificación y 
-												Región hasta que no queden más símbolos de advertencia con relleno sólido<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>. Una vez completado, 
-												continúe hacia adelante hasta <a href="/#/forecastReport/forecastOutput"
-												target="_blank" style="text-decoration: underline;">Mensualmente
-												Previsión</a> para verificar todas las unidades de planificación juntas.</li>
-										</ol>
-										<p>Nota: Los usuarios pueden seleccionar varios pronósticos de árboles como
-											pronóstico final, lo que
-											voluntad
-											agregar las cantidades previstas mensualmente; sin embargo, los usuarios no
-											pueden seleccionar
-											múltiple
-											previsiones de consumo o una combinación de previsiones de consumo y de
-											árboles.
+											<li>
+												Seleccione el pronóstico final en la tabla Comparar y Seleccionar. Si hay un
 
+												<i class="fa fa-exclamation-triangle" aria-hidden="true"></i> símbolo
+												Al lado de la Unidad de Planificación, hay
+												no se seleccionó ningún pronóstico.
+												Si hay un <i class="fa fa-check-square" aria-hidden="true"></i>
+												símbolo al lado de
+												la Unidad de Planificación,
+												hay un pronóstico seleccionado. Repita los pasos 1-3 para cada unidad de planificación
+												y
+												Región hasta no más<i class="fa fa-exclamation-triangle"
+													símbolos aria-hidden="true"></i>
+												permanecer. Una vez completado,
+												continúe hacia adelante hasta <a href="/#/forecastReport/forecastOutput"
+													target="_blank" style="text-decoration: underline;">Mensualmente
+													Previsión</a> para verificar todas las unidades de planificación juntas.
+											</li>
+										</ol>
+										<p>Nota: Los usuarios pueden seleccionar varios pronósticos de árboles como pronóstico final, lo que
+											agregará las cantidades previstas mensualmente; sin embargo, los usuarios no pueden seleccionar
+											Múltiples pronósticos de consumo o una combinación de consumo y árbol.
+											previsiones.
 
 										</p>
 										</p>
