commited by anisha

--- a/src/ShowGuidanceFiles/ManageTreeBuildTreesPr.html
+++ b/src/ShowGuidanceFiles/ManageTreeBuildTreesPr.html
@@ -143,7 +143,7 @@
 																	class="fa fa-cube" aria-hidden="true"></i></b></td>
 														<td><i class="fa fa-exchange fa-rotate-90"
 																aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i
-																class="fa fa-line-chart"></i>,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
+																class="fa fa-line-chart"></i>,<i><img class="Iconclr" src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 													</tr>
 													<tr>
 														<td class="BgLightBlue"><b>Percentagem %</b></td>
@@ -152,7 +152,7 @@
 																style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i
 																	class="fa fa-cube" aria-hidden="true"></i></b></td>
 														<td><i class="fa fa-exchange fa-rotate-90"
-																aria-hidden="true"></i>,<i class="fa fa-link"></i>,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
+																aria-hidden="true"></i>,<i class="fa fa-link"></i>,<i><img class="Iconclr" src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 													</tr>
 													<tr>
 														<td class="BgDarkBlue"><b>Unidade de previsão <i
@@ -176,7 +176,7 @@
 													</tr>
 													<tr>
 														<td style="background:#002f6c;color: #fff;"><b>Funil <i><img src="../ShowGuidanceFiles/img/funnel1.png" width="18" height="18"/></i></b></td>
-														<td>Soma dos nós de origem vinculados <i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
+														<td>Soma dos nós de origem vinculados <i><img class="Iconclr" src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 														<td>% or</td>
 														<td>-</td>
 													</tr>
