--- a/src/ShowGuidanceFiles/TreeTableEn.html
+++ b/src/ShowGuidanceFiles/TreeTableEn.html
@@ -67,32 +67,46 @@ a {
 														<tr>
 															<td style="background: #a7c6ed;color: #002f6c;"><b>Aggregation ∑</b></td>
 															<td>Sum of children</td>
-															<td><b style="color: rgb(0, 47, 108);">∑</b> or Number</td>
+															<td><b style="color: rgb(0, 47, 108);">∑</b> or #</td>
 															<td>-</td>
 														</tr>
 														<tr>
 															<td style="background: #a7c6ed;color: #002f6c;"><b>Number #</b></td>
 															<td>Defined at this node</td>
 															<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i></td>
+															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i>,<i><img class="Iconclr"
+																src="../ShowGuidanceFiles/img/aggregateAllowed.png"
+																width="20" height="20" /></i></td>
 														</tr>
 														<tr>
 															<td style="background: #a7c6ed;color: #002f6c;"><b>Percentage %</b></td>
 															<td>Defined as a percentage of the parent</td>
 															<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
+															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>,<i><img class="Iconclr"
+																src="../ShowGuidanceFiles/img/aggregateAllowed.png"
+																width="20" height="20" /></i></td>
 														</tr>
 														<tr>
 															<td style="background:#002f6c;color: #fff;"><b>Forecasting Unit <i class="fa fa-cube" aria-hidden="true"></i></b></td>
-															<td>Defined as a percentage of the parent and forecasting unit parameters</td>
+															<td>A percentage of the parent and forecasting unit parameters</td>
 															<td><b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cubes" aria-hidden="true"></i></b></td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
 														</tr>
 														<tr>
 															<td style="background:#002f6c;color: #fff;"><b>Planning Unit <i class="fa fa-cubes" aria-hidden="true"></i></b></td>
-															<td>Defined as a percentage of the parent and planning unit parameters</td>
+															<td>A percentage of the parent and planning unit parameters</td>
 															<td>-</td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
+														</tr>
+														<tr>
+															<td style="background:#002f6c;color: #fff;"><b>Funnel <i><img
+																			src="../ShowGuidanceFiles/img/funnel1.png"
+																			width="18" height="18" /></i></b></td>
+															<td>Sum of linked source nodes <i><img class="Iconclr"
+																		src="../ShowGuidanceFiles/img/aggregateAllowed.png"
+																		width="20" height="20" /></i></td>
+															<td>% or</td>
+															<td>-</td>
 														</tr>
 													</tbody>
 												</table>
