--- a/src/ShowGuidanceFiles/ManageTreeBuildTreesEn.html
+++ b/src/ShowGuidanceFiles/ManageTreeBuildTreesEn.html
@@ -60,7 +60,7 @@
 		<tr>
 			<td align="center" style="padding:0;">
 				<table role="presentation"
-					style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border:1px solid #fff;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
+					style="max-width: 910px;min-width:100%;margin-top:20px;margin-bottom:20px;border-collapse:collapse;border-spacing:0;text-align:left;border-radius: 0.25rem;background-color: #fff;">
 					<tr>
 						<td style="padding:10px 30px 20px 30px;">
 							<table role="presentation"
@@ -100,13 +100,13 @@
 												:</span></p>
 										<ul class="pl-lg-4" style="font-size: 13px;">
 											<li><i class="fa fa-trash-o" aria-hidden="true"
-													style="color: rgb(0, 47, 108);"></i> Delete: Deletes the selected
+													></i> Delete: Deletes the selected
 												node </li>
 											<li><i class="fa fa-clone" aria-hidden="true"
-													style="color: rgb(0, 47, 108);"></i> Duplicate: Duplicates the
+													></i> Duplicate: Duplicates the
 												selected node under the same parent </li>
 											<li><i class="fa fa-plus-square-o" aria-hidden="true"
-													style="color: rgb(0, 47, 108);"></i> Add: Adds a child to the
+													></i> Add: Adds a child to the
 												selected node.</li>
 										</ul>
 										</p>
@@ -138,11 +138,11 @@
 														</td>
 														<td>Defined at this node</td>
 														<td>% or <b
-																style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i
+																style="color: rgb(0, 47, 108); padding: 3px;"><i
 																	class="fa fa-cube" aria-hidden="true"></i></b></td>
 														<td><i class="fa fa-exchange fa-rotate-90"
 																aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i
-																class="fa fa-line-chart"></i>,<i><img
+																class="fa fa-line-chart"></i>,<i><img class="Iconclr"
 																	src="../ShowGuidanceFiles/img/aggregateAllowed.png"
 																	width="20" height="20" /></i></td>
 
@@ -152,11 +152,11 @@
 																%</b></td>
 														<td>A percentage of the parent</td>
 														<td>% or <b
-																style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i
+																style="color: rgb(0, 47, 108); padding: 3px;"><i
 																	class="fa fa-cube" aria-hidden="true"></i></b></td>
 														<td><i class="fa fa-exchange fa-rotate-90"
 																aria-hidden="true"></i>,<i
-																class="fa fa-link"></i>,<i><img
+																class="fa fa-link"></i>,<i><img class="Iconclr"
 																	src="../ShowGuidanceFiles/img/aggregateAllowed.png"
 																	width="20" height="20" /></i></td>
 													</tr>
@@ -166,7 +166,7 @@
 														<td>A percentage of the parent and forecasting unit parameters
 														</td>
 														<td><b
-																style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i
+																style="color: rgb(0, 47, 108); padding: 3px;"><i
 																	class="fa fa-cubes" aria-hidden="true"></i></b></td>
 														<td><i class="fa fa-exchange fa-rotate-90"
 																aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
@@ -183,7 +183,7 @@
 														<td style="background:#002f6c;color: #fff;"><b>Funnel <i><img
 																		src="../ShowGuidanceFiles/img/funnel1.png"
 																		width="18" height="18" /></i></b></td>
-														<td>Sum of linked source nodes <i><img
+														<td>Sum of linked source nodes <i><img class="Iconclr"
 																	src="../ShowGuidanceFiles/img/aggregateAllowed.png"
 																	width="20" height="20" /></i></td>
 														<td>% or</td>
