--- a/src/ShowGuidanceFiles/ManageTreeBuildTreesFr.html
+++ b/src/ShowGuidanceFiles/ManageTreeBuildTreesFr.html
@@ -100,13 +100,13 @@ a {
 															<td class="BgLightBlue"><b>Nombre #</b></td>
 															<td>Défini à ce nœud</td>
 															<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i>,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
+															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i>,<i><img class="Iconclr" src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 														</tr>
 														<tr>
 															<td class="BgLightBlue"><b>Pourcentage %</b></td>
 															<td>Un pourcentage du parent/source</td>
 															<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
+															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>,<i><img class="Iconclr" src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 														</tr>
 														<tr>
 															<td class="BgDarkBlue"><b>Unité de prévision <i class="fa fa-cube" aria-hidden="true"></i></b></td>
@@ -124,7 +124,7 @@ a {
 														<tr>
 															<td style="background:#002f6c;color: #fff;"><b>Entonnoir <i><img src="../ShowGuidanceFiles/img/funnel1.png" width="18" height="18"/></i></b></td>
 															<td>Somme des nœuds sources liés
-																<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
+																<i><img class="Iconclr" src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 															<td>% or</td>
 															<td>-</td>
 														</tr>
