--- a/src/ShowGuidanceFiles/ManageTreeBuildTreesSp.html
+++ b/src/ShowGuidanceFiles/ManageTreeBuildTreesSp.html
@@ -96,13 +96,13 @@ a {
 																		<td class="BgLightBlue"><b>Número #</b></td>
 																		<td>Definido en este nodo</td>
 																		<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-																		<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i>,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
+																		<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i>,<i><img class="Iconclr" src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 																	</tr>
 																	<tr>
 																		<td class="BgLightBlue"><b>Porcentaje %</b></td>
 																		<td>Un porcentaje del padre</td>
 																		<td>% or <b style="background: rgb(255, 255, 255); color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-																		<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link">,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></i></td>
+																		<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link">,<i><img class="Iconclr" src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></i></td>
 																	</tr>
 																	<tr>
 																		<td class="BgDarkBlue"><b>Unidad de previsión <i class="fa fa-cube" aria-hidden="true"></i></b></td>
@@ -121,7 +121,7 @@ a {
 																						src="../ShowGuidanceFiles/img/funnel1.png"
 																						width="18" height="18" /></i></b></td>
 																		<td>Suma de nodos de origen vinculados
-																			<i><img
+																			<i><img class="Iconclr"
 																					src="../ShowGuidanceFiles/img/aggregateAllowed.png"
 																					width="20" height="20" /></i></td>
 																		<td>% or</td>
