--- a/src/ShowGuidanceFiles/TreeTablePr.html
+++ b/src/ShowGuidanceFiles/TreeTablePr.html
@@ -67,32 +67,38 @@ a {
 														<tr>
 															<td style="background: #a7c6ed;color: #002f6c;"><b>Agregação ∑</b></td>
 															<td>Soma de filhos</td>
-															<td><b style="color: rgb(0, 47, 108);">∑</b> ou Número</td>
+															<td><b style="color: rgb(0, 47, 108);">∑</b> ou #</td>
 															<td>-</td>
 														</tr>
 														<tr>
 															<td style="background: #a7c6ed;color: #002f6c;"><b>Número #</b></td>
 															<td>Definido neste nó</td>
 															<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i></td>
+															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i>,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 														</tr>
 														<tr>
 															<td style="background: #a7c6ed;color: #002f6c;"><b>Percentagem %</b></td>
-															<td>Definido como uma porcentagem do pai</td>
+															<td>Uma porcentagem do pai</td>
 															<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
+															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 														</tr>
 														<tr>
 															<td style="background:#002f6c;color: #fff;"><b>Unidade de previsão <i class="fa fa-cube" aria-hidden="true"></i></b></td>
-															<td>Definido como uma porcentagem dos parâmetros da unidade pai e de previsão</td>
+															<td>Uma porcentagem dos parâmetros da unidade pai e de previsão</td>
 															<td><b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cubes" aria-hidden="true"></i></b></td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
 														</tr>
 														<tr>
 															<td style="background:#002f6c;color: #fff;"><b>Unidade de Planejamento <i class="fa fa-cubes" aria-hidden="true"></i></b></td>
-															<td>Definido como uma porcentagem dos parâmetros da unidade pai e de planejamento</td>
+															<td>Uma porcentagem dos parâmetros da unidade pai e de planejamento</td>
 															<td>-</td>
 															<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
+														</tr>
+														<tr>
+															<td style="background:#002f6c;color: #fff;"><b>Funil <i><img src="../ShowGuidanceFiles/img/funnel1.png" width="18" height="18"/></i></b></td>
+															<td>Soma dos nós de origem vinculados <i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
+															<td>% or</td>
+															<td>-</td>
 														</tr>
 													</tbody>
 												</table>
