--- a/src/ShowGuidanceFiles/TreeTableSp.html
+++ b/src/ShowGuidanceFiles/TreeTableSp.html
@@ -67,32 +67,43 @@ a {
 													<tr>
 														<td style="background: #a7c6ed;color: #002f6c;"><b>Agrégation ∑</b></td>
 														<td>Somme des dérivés</td>
-														<td><b style="color: rgb(0, 47, 108);">∑</b> ou Nombre</td>
+														<td><b style="color: rgb(0, 47, 108);">∑</b> ou #</td>
 														<td>-</td>
 													</tr>
 													<tr>
 														<td style="background: #a7c6ed;color: #002f6c;"><b>Nombre #</b></td>
 														<td>Défini à ce nœud</td>
 														<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-														<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i></td>
+														<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>, <i class="fa fa-line-chart"></i>,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 													</tr>
 													<tr>
 														<td style="background: #a7c6ed;color: #002f6c;"><b>Pourcentage %</b></td>
-														<td>Défini comme un pourcentage du parent/source</td>
+														<td>Un pourcentage du parent/source</td>
 														<td>% or <b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cube" aria-hidden="true"></i></b></td>
-														<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
+														<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i>,<i><img src="../ShowGuidanceFiles/img/aggregateAllowed.png" width="20" height="20"/></i></td>
 													</tr>
 													<tr>
 														<td style="background:#002f6c;color: #fff;"><b>Unité de prévision <i class="fa fa-cube" aria-hidden="true"></i></b></td>
-														<td>Défini comme un pourcentage de la source et des paramètres de l'unité de prévision</td>
+														<td>Un pourcentage de la source et des paramètres de l'unité de prévision</td>
 														<td><b style="color: rgb(0, 47, 108); padding: 3px;"><i class="fa fa-cubes" aria-hidden="true"></i></b></td>
 														<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
 													</tr>
 													<tr>
 														<td style="background:#002f6c;color: #fff;"><b>Unité de planification <i class="fa fa-cubes" aria-hidden="true"></i></b></td>
-														<td>Défini comme un pourcentage du parent/source et des paramètres de l'unité de planification</td>
+														<td>Un pourcentage du parent/source et des paramètres de l'unité de planification</td>
 														<td>-</td>
 														<td><i class="fa fa-exchange fa-rotate-90" aria-hidden="true"></i>,<i class="fa fa-link"></i></td>
+													</tr>
+													<tr>
+														<td style="background:#002f6c;color: #fff;"><b>Embudo <i><img
+																		src="../ShowGuidanceFiles/img/funnel1.png"
+																		width="18" height="18" /></i></b></td>
+														<td>Suma de nodos de origen vinculados
+															<i><img
+																	src="../ShowGuidanceFiles/img/aggregateAllowed.png"
+																	width="20" height="20" /></i></td>
+														<td>% or</td>
+														<td>-</td>
 													</tr>
 												</tbody>
 											</table>
